<package>
  <name>hlpr_manipulation</name>
  <version>1.0.0</version>
  <description>Metapackage for the ROS Packages for all things manipulation with HLP-R common platform (Stanley Vector)</description>

  <author email="barisakgun@gmail.com">Baris Akgun</author>
  <author email="vchu@gatech.edu">Vivian Chu</author>
  <maintainer email="vchu@gatech.edu">Vivian Chu</maintainer>
  
  <url type="website">https://github.com/HLP-R/hlpr_manipulation/wiki</url>
  <url type="bugtracker">https://github.com/HLP-R/hlpr_manipulation/issues</url>
  <url type="repository">https://github.com/HLP-R/hlpr_manipulation</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hlpr_manipulation_utils</run_depend>
  <run_depend>hlpr_trac_ik</run_depend>
  <run_depend>hlpr_wpi_jaco_moveit_config</run_depend>
  
  <export>
    <metapackage />
  </export>
</package>

