<?xml version="1.0"?>
<package format="2">
  <name>hlpr_relaxed_ik</name>
  <version>0.0.1</version>
  <description>
    Service wrapper for relaxed_ik
  </description>

  <author>ragtz</author>
  <maintainer email="ragtz@cs.utexas.edu">ragtz</maintainer>
  <license>BSD</license>
  <url>https://github.com/HLP-R/hlpr_manipulation</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>relaxed_ik</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>relaxed_ik</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>relaxed_ik</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
