<package format="2">
  <name>trac_ik_wrapper</name>
  <version>0.0.1</version>
  <description>
    Wrapper for trac_ik
  </description>
  <author>Tesca Fitzgerald</author>
  <maintainer email="tesca.fitzgerald@gmail.com">Tesca Fitzgerald</maintainer>
  <license>TBD</license>
  <url>TBD</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen3</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>trac_ik_lib</depend>
  <depend>boost</depend>
  <depend>orocos_kdl</depend>
  <depend>xacro</depend>
</package>

