<package format="2">
  <name>hlpr_trac_ik</name>
  <version>0.0.1</version>
  <description>
    Wrapper for trac_ik
  </description>
  <author>Tesca Fitzgerald</author>
  <maintainer email="tesca.fitzgerald@gmail.com">Tesca Fitzgerald</maintainer>
  <license>BSD</license>
  <url>https://github.com/HLP-R/hlpr_manipulation/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>trac_ik_lib</depend>
  <depend>boost</depend>
  <depend>orocos_kdl</depend>
  <depend>xacro</depend>
</package>

